<resources>
    <string name="app_name">Kitchen Guesser</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_thing_found">J\'ai trouvé !</string>
    <string name="title_activity_play_again">Rejouer ?</string>
    <string name="touchforbegin">Touchez pour commencer !</string>
    <string name="title">Kitchen Guesser</string>
    <string name="title_activity_selection_thing">Recherche</string>
    <string name="title_activity_add_new_thing">Ajout d\'un objet</string>
    <string name="action_debug">Debug</string>
    <string name="thing_found">Vous pensez à un(e) :</string>
    <string name="correct">Est-ce correct ?</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="play_again">Refaire une partie ?</string>
    <string name="thing_name">Nom de l\'objet</string>
    <string name="question_prompt">Votre question fermée</string>
    <string name="add_thing_to_base">Ajouter un objet à la base</string>
    <string name="search_thing">Rechercher un objet</string>
    <string name="search">Recherche</string>
    <string name="thing_to_add">Objet à ajouter</string>
    <string name="thing_image_access">thing image</string>
    <string name="add_question_question">Qu\'est-ce qui différencie votre objet d\'un(e) \"couteau de cuisine\"</string>
    <string name="submit">Valider</string>
    <string name="answer_to_new_question">La réponse à votre question :</string>
    <string name="add_thing">Ajouter un nouvel objet</string>
    <string name="cant_find_your_thing">Vous ne trouvez pas votre objet ?</string>
    <string name="dialog_exit_game">Êtes-vous sûr de vouloir quitter l\'application ?</string>
    <string name="dialog_exit_game_title">Quitter</string>
</resources>
