<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="fr.epsi.i4.kitchenguesser.activities.PlayAgainActivity"
    android:orientation="vertical"
    android:background="#004db6"
    android:gravity="center">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/picture_background"
        android:layout_below="@+id/imageView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="50dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/white"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/play_again"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/yes"
                    android:layout_weight="1"
                    android:onClick="yesClick"
                    android:background="@drawable/custom_active_button"
                    android:textColor="@android:color/white"
                    android:layout_margin="2dp"/>

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/no"
                    android:layout_weight="1"
                    android:onClick="noClick"
                    android:background="@drawable/custom_button"
                    android:textColor="@android:color/white"
                    android:layout_margin="2dp"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:id="@+id/imageView3"
        android:src="@drawable/chef_2"
        android:scaleType="fitStart"
        android:layout_marginBottom="-36dp" />

</RelativeLayout>
