<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="fr.epsi.i4.kitchenguesser.AddNewThingActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/add_thing_to_base"
        android:id="@+id/add_thing_title"
        android:paddingBottom="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/objectName"
        android:layout_gravity="center_horizontal"
        android:hint="@string/thing_name" />

    <view
        android:layout_width="356dp"
        android:layout_height="wrap_content"
        class="android.support.v4.widget.Space"
        android:id="@+id/spaceNameThing_Question"
        android:layout_weight="0.14" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/question"
        android:paddingTop="20dp"
        android:paddingBottom="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/customerQuestion"
        android:layout_gravity="center_horizontal"
        android:hint="@string/question_prompt" />

    <view
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        class="android.support.v4.widget.Space"
        android:id="@+id/view6"
        android:layout_weight="0.19" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="La réponse à votre question :"
        android:id="@+id/textView2"
        android:gravity="center"
        android:paddingTop="20dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Oui"
            android:id="@+id/radioYes"
            android:paddingLeft="0dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Non"
            android:id="@+id/radioNo"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp" />
    </RadioGroup>

    <View
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Valider"
        android:id="@+id/validation"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
